--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         }, 100);
       }
       
-      // Reiniciar cuando la página cambie (para React Router)
+      // Reiniciar cuando la página cambie (para React Router)  asdasdasd
       if (typeof window !== 'undefined') {
         window.addEventListener('load', () => {
           setTimeout(googleTranslateElementInit, 500);
